# JVRC_task_models

./: 10.gazebo_model_path_setup.bash.em  CMakeLists.txt  README.md  package.xml
JVRC_O1/: JVRC_O1.sdf  model.config
JVRC_O1/dae/: O1_frag.dae  O1_paipu_base.dae  O1_paipu_tunneru.dae  O1_surface.dae  O1_wall.dae  target8.dae  target9.dae
JVRC_O2/: JVRC_O2.sdf  model.config
JVRC_O2/dae/: JVRC_O2_fin_detailed_collision.dae  JVRC_O2_fin_detailed_visual.dae  O2_base_collision.dae  O2_base_up.dae  O2_base_visual-.dae  O2_bolt.dae  O2_fin.dae  O2_fin_visual.dae  O2_frag.dae  O2_paipu_fin.dae  O2_paipu_tunneru.dae  O2_tunneru_wall.dae  target2.dae  target3.dae
JVRC_R1/: JVRC_R1.sdf  model.config
JVRC_R11L/: JVRC_R11L.sdf  model.config
JVRC_R11L/dae/: R11L_car_lacked_image_info.txt  R11L_frag.dae  R11L_paipu2.dae  R11L_paipu3.dae  R11L_surface.dae  R11L_wall.dae
JVRC_R11M/: JVRC_R11M.sdf  model.config
JVRC_R12/: JVRC_R12.sdf  model.config
JVRC_R2AB/: JVRC_R2AB.sdf  model.config
JVRC_R2C/: JVRC_R2C.sdf  model.config
JVRC_R3A_field/: JVRC_R3A_field.sdf  model.config
JVRC_R3A_obj/: JVRC_R3A_obj.sdf  model.config
JVRC_R3B/: JVRC_R3B.sdf  model.config
JVRC_R4_field/: JVRC_R4_field.sdf  model.config
JVRC_R4_obj/: JVRC_R4_obj.sdf  model.config
JVRC_R5_field/: JVRC_R5_field.sdf  model.config
JVRC_R5_obj/: JVRC_R5_obj.sdf  model.config
launch/: start.launch
worlds/: jvrc_o1.world  jvrc_r1.world  jvrc_r11l.world  jvrc_r11m.world  jvrc_r12.world  jvrc_r2ab.world  jvrc_r2c.world  jvrc_r3a.world  jvrc_r3b.world  jvrc_r4.world  jvrc_r5.world
(+65 files in other folders)
